got rid of sidebar overflow bug by adjusting project grid template rows, also realigned content on project cards

--- a/style.css
+++ b/style.css
@@ -131,7 +131,6 @@ li {
 .projects-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-template-rows: repeat(auto-fill, 250px);
   gap: 1rem;
 }
 
@@ -159,7 +158,7 @@ li {
 .announcements,
 .trending {
   display: grid;
-  align-content: center;
+  align-content: space-evenly;
   gap: 1rem;
 }
 
